--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: "^0.7.0"
-  firebase_auth: "^0.20.0+1"
-  google_sign_in: "^4.5.9"
+  flutter_secure_storage: "^3.3.5"
 
 
   # The following adds the Cupertino Icons font to your application.
