--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_secure_storage: "^3.3.5"
-
+  shared_preferences: "^0.5.12+4"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
