--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_core: "0.7.0"
   cloud_firestore: "^0.16.0"
   dotenv: "^2.0.0"
+  charts_flutter: "^0.9.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
